--- a/404.md
+++ b/404.md
@@ -4,7 +4,7 @@ permalink: /404.html
 backLink: False
 ---
 
-## 404
+## 404 - Page not found
 
 
-Page not found! :(
+This page is unkown, please go back to the last working page.
