--- a/404.md
+++ b/404.md
@@ -1,10 +1,13 @@
 ---
 layout: post
-permalink: /404.html
+permalink: /404
 backLink: False
 ---
 
 ## 404 - Page not found
 
 
-This page is unkown, please go back to the last working page.
+This page is unkown!
+
+
+Please go back to the last working page.
