swtitch to using author tag

--- a/_posts/2021-10-25-starting.md
+++ b/_posts/2021-10-25-starting.md
@@ -1,5 +1,5 @@
 ---
-publisher: matmair
+author: matmair
 title: Starting with templates
 ---
 A good starting-point for developing your own plugin is taking a look at the [documentation](https://inventree.readthedocs.io/en/latest/extend/plugins/).
