--- a/_posts/2021-10-25-starting.md
+++ b/_posts/2021-10-25-starting.md
@@ -2,6 +2,6 @@
 author: matmair
 title: Starting with templates
 ---
-A good starting-point for developing your own plugin is taking a look at the [documentation](https://inventree.readthedocs.io/en/latest/extend/plugins/).
+A good starting-point for developing your own plugin is taking a look at the [documentation](https://docs.inventree.org/en/latest/extend/plugins/).
 
 You could also use one of the current plugins as a sample.
