Add credit note

--- a/_news/2022-11-14-website.md
+++ b/_news/2022-11-14-website.md
@@ -18,3 +18,7 @@ inventree.org will no longer host the InvenTree software documentation. Document
 ### Demo Server
 
 The [demo server](/demo.md) remains available at [demo.inventree.org](https://demo.inventree.org)
+
+### Credits
+
+Thanks to [https://github.com/matmair](@matmair) for bringing the new website into existence
