Fix broken link

--- a/_news/2022-11-14-website.md
+++ b/_news/2022-11-14-website.md
@@ -21,4 +21,4 @@ The [demo server](/demo.md) remains available at [demo.inventree.org](https://de
 
 ### Credits
 
-Thanks to [https://github.com/matmair](@matmair) for bringing the new website into existence
+Thanks to [@matmair](https://github.com/matmair) for bringing the new website into existence
