Notes about backup/restore feature

--- a/_posts/2022-12-12-0.9.0-release.md
+++ b/_posts/2022-12-12-0.9.0-release.md
@@ -19,7 +19,11 @@ You can find more information about the installer at [docs.inventree.org](https:
 
 ### Backup and Restore
 
+Database backup and restore functionality has been improved, using the [dbbackup library](https://django-dbbackup.readthedocs.io/en/master/). A backup of database records (and uploaded media files) can be performed with a simple command line action. Backup can also be configured to occur periodically, serviced by the background worker.
+
 ### Pricing Overhaul
+
+
 
 ### Barcode Refactor
 
