Info about pricing overhaul

--- a/_posts/2022-12-12-0.9.0-release.md
+++ b/_posts/2022-12-12-0.9.0-release.md
@@ -23,7 +23,11 @@ Database backup and restore functionality has been improved, using the [dbbackup
 
 ### Pricing Overhaul
 
+This release provides a major overhaul for how pricing data is managed. The new pricing system calculates various pricing information (such as BOM cost or purchase price range) and caches this data in the database. This means that the efficiency of accessing pricing data in real time is greatly improved. For complex bills of material, viewing pricing data was (before this update) extremely prohibitive, due to the recursive calculations which were being performed "on the fly". The new achitecture makes use of the background worker to recalculate pricing information whenever the underlying data changes, ensuring that "up to date" pricing is readily available.
 
+Additionally, more options for controlling how pricing information is calculated and handled have been implemented.
+
+You can read more about managing pricing data in InvenTree at [docs.inventree.org](https://docs.inventree.org/en/latest/part/pricing/).
 
 ### Barcode Refactor
 
