--- a/_posts/2022-12-12-0.9.0-release.md
+++ b/_posts/2022-12-12-0.9.0-release.md
@@ -3,7 +3,7 @@ author: oliver
 title: 0.9.0 Stable Release
 ---
 
-The InvenTree team is very excited to announce the InvenTree **0.9.0 Stable Release**!
+The InvenTree team is very excited to announce the InvenTree 0.9.0 Stable Release!
 
 This release is the culmination of many hours of work from multiple developers, providing numerous new features and bug fixes. We extend our thanks to the contributors who have helped on this release, as well as the users who have suggested new features or helped us track down outstanding software issues.
 
@@ -31,9 +31,23 @@ You can read more about managing pricing data in InvenTree at [docs.inventree.or
 
 ### Barcode Refactor
 
+Barcode support has been significantly improved, allowing custom barcode functionality for a greater range of database model types, and simplifying the API.
+
+- Custom barcodes can now be assigned to *Part* instances
+- Custom barcodes can now be assigned to *Stock Location* instances
+- Custom barcodes can now be assigned to *Supplier Part* instances
+
+Read more about the updated barcode support in [the InvenTree documentation](https://docs.inventree.org/en/latest/barcodes/barcodes/).
+
 ### Builtin Plugins
 
+As part of the ongoing improvements to the plugin system, InvenTree now features a number of "builtin" plugins. These plugins are always active (even if custom plugin support is disabled for the server) and provide core InvenTree functionality in a way which aligns with the operation of the plugin system. This is intended to streamline the way in which plugins are implemented, as core components of the code are now offloaded to the plugin with a simpler interface.
+
+We have also made some significant improvements to the [plugin system documentation](https://docs.inventree.org/en/latest/extend/plugins/).
+
 ### Validation Plugins
+
+A completely new type of plugin introduced in this release is the [validation plugin mixin](https://docs.inventree.org/en/latest/extend/plugins/validation/). This plugin allows users to implement custom validation methods for various database fields. In addition to allowing validation of field values against complex custom rules, this plugin allows automated generation of the "next value" for certain fields, such as serial numbers and batch codes.
 
 ### News Reader
 
