--- a/_posts/2022-12-12-0.9.0-release.md
+++ b/_posts/2022-12-12-0.9.0-release.md
@@ -25,6 +25,8 @@ Database backup and restore functionality has been improved, using the [dbbackup
 
 This release provides a major overhaul for how pricing data is managed. The new pricing system calculates various pricing information (such as BOM cost or purchase price range) and caches this data in the database. This means that the efficiency of accessing pricing data in real time is greatly improved. For complex bills of material, viewing pricing data was (before this update) extremely prohibitive, due to the recursive calculations which were being performed "on the fly". The new achitecture makes use of the background worker to recalculate pricing information whenever the underlying data changes, ensuring that "up to date" pricing is readily available.
 
+![BOM Pricing](/assets/blog/bom-pricing.png)
+
 Additionally, more options for controlling how pricing information is calculated and handled have been implemented.
 
 You can read more about managing pricing data in InvenTree at [docs.inventree.org](https://docs.inventree.org/en/latest/part/pricing/).
@@ -50,6 +52,8 @@ We have also made some significant improvements to the [plugin system documentat
 A completely new type of plugin introduced in this release is the [validation plugin mixin](https://docs.inventree.org/en/latest/extend/plugins/validation/). This plugin allows users to implement custom validation methods for various database fields. In addition to allowing validation of field values against complex custom rules, this plugin allows automated generation of the "next value" for certain fields, such as serial numbers and batch codes.
 
 ### News Reader
+
+
 
 ### Part Scheduling
 
