--- a/_posts/2022-12-12-0.9.0-release.md
+++ b/_posts/2022-12-12-0.9.0-release.md
@@ -53,7 +53,11 @@ A completely new type of plugin introduced in this release is the [validation pl
 
 ### News Reader
 
+Now that the new website is live, a [news feed](/news) is available. If enabled, news about InvenTree can be displayed in the InvenTree dashboard.
 
+*Note that this feature is disabled by default, and must be enabled by a staff user*
+
+![News Reader](/assets/blog/news-reader.png)
 
 ### Part Scheduling
 
