--- a/_posts/2022-12-12-0.9.0-release.md
+++ b/_posts/2022-12-12-0.9.0-release.md
@@ -61,33 +61,26 @@ Now that the new website is live, a [news feed](/news) is available. If enabled,
 
 ### Part Scheduling
 
-- New features
+The [Part Scheduling](https://docs.inventree.org/en/latest/part/scheduling/) functionality has received some updates in this release. If enabled, the *Part Scheduling* tab shows predicted future stock levels, based on incoming and outgoing orders.
 
-### Supplier Pack Size
+### Data Sanitization
 
-- New feature description
-- Pricing integration
+A number of security related changes have been implemented, providing multiple improvements related to input data sanitization. Some of these updates include:
 
-### Input Sanitization
+- Remove invisible ASCII and unicode characters from user submitted data
+- Sanitize uploaded SVG files
+- Remove malicious HTML from form fields
 
-- Remove invisible chars
-- Sanitize SVG
-- Blean cleaning of form fields
+More generally, a number of security fixes have been made for this release, following vulnerability reports received from the InvenTree community. You can view information on all our [security advisory notices on GitHub](https://github.com/inventree/InvenTree/security/advisories).
 
-### Iconic
+### Customizing
 
-- Custom icons
-
-### Make a Splash
-
-- Custom splash screen
-- Custom logo
+Further customization of InvenTree is now available, with custom splash screens and application icons supported in this release.
 
 ### Bug Fixes
 
-- Lots of bug fixes
-- Refer to the release notes
+In addition to many new features, this release also provides fixes for a number of bugs, of varying severity! Refer to the [release notes](#release-notes) for further information.
 
 ### Release Notes
 
-You can view the [full release notes](https://github.com/inventree/InvenTree/releases/tag/0.9.0) on our GitHub page.
+This list covers only a fraction of the exciting new features. You can view the [full release notes](https://github.com/inventree/InvenTree/releases/tag/0.9.0) on our GitHub page.
