Adds note about supplier part pack size

--- a/_posts/2022-12-12-0.9.0.md
+++ b/_posts/2022-12-12-0.9.0.md
@@ -63,6 +63,10 @@ Now that the new website is live, a [news feed](/news) is available. If enabled,
 
 The [Part Scheduling](https://docs.inventree.org/en/latest/part/scheduling/) functionality has received some updates in this release. If enabled, the *Part Scheduling* tab shows predicted future stock levels, based on incoming and outgoing orders.
 
+### Supplier Part Pack Size
+
+A major improvement to the way supplier parts are handled is the addition of "pack size" for supplier parts. While internally, parts are represented using "unit quantity", they can be sourced from suppliers in larger pack quantities. Pack sizing is also taken into quantity when calculating unit pricing. 
+
 ### Data Sanitization
 
 A number of security related changes have been implemented, providing multiple improvements related to input data sanitization. Some of these updates include:
