--- a/_posts/2023-01-02-upcoming.md
+++ b/_posts/2023-01-02-upcoming.md
@@ -33,7 +33,7 @@ Our new website (inventree.org) is now up and running! Thanks to @matmair in par
 
 ### Translations
 
-[Translations](/contribute.md#translate) for the InevnTree project continue to grow, thanks to our vibrant community of users. Thanks to the [crowdin project](https://crowdin.com) which makes this possible.
+[Translations]({% link contribute.md %}#translate) for the InevnTree project continue to grow, thanks to our vibrant community of users. Thanks to the [crowdin project](https://crowdin.com) which makes this possible.
 
 ### Users
 
