Add external links

--- a/_posts/2023-01-02-0.10.0.md
+++ b/_posts/2023-01-02-0.10.0.md
@@ -9,6 +9,16 @@ The InvenTree development team is proud to announce the 0.10.0 stable release!
 
 ## Bug Fixes
 
+In addition to the new features listed above, this release also provides fixes for a number of outstanding bugs. Many of these have been reported by our users - thanks for your feedback and help to make InvenTree better for everyone!
+
 ## Release Notes
 
 As always, the full set of release notes and changelogs is available on our GitHub Page: [https://github.com/inventree/InvenTree/releases/tag/0.10.0](https://github.com/inventree/InvenTree/releases/tag/0.10.0)
+
+## Mobile App
+
+Corresponding with the main software release, the mobile app has [a new release also](https://github.com/inventree/inventree-app/releases/tag/0.10.0).
+
+## Python Bindings
+
+The InvenTree python bindings have also been updated - check out [the release notes](https://github.com/inventree/inventree-python/releases/tag/0.10.0).
