--- a/_posts/2023-01-02-0.10.0.md
+++ b/_posts/2023-01-02-0.10.0.md
@@ -7,6 +7,10 @@ The InvenTree development team is proud to announce the 0.10.0 stable release!
 
 ## New Features
 
+### SSO Improvements
+
+A lot of work has gone into improving [Single Sign On (SSO)](https://docs.inventree.org/en/latest/settings/SSO/) integration. We have made some changes to make the SSO process smoother, and improved the user experience. Additionally (and importantly) the documentation has been significantly improved!
+
 ## Bug Fixes
 
 In addition to the new features listed above, this release also provides fixes for a number of outstanding bugs. Many of these have been reported by our users - thanks for your feedback and help to make InvenTree better for everyone!
