--- a/_posts/2023-02-06-0.10.0.md
+++ b/_posts/2023-02-06-0.10.0.md
@@ -35,7 +35,7 @@ In addition to the new features listed above, this release also provides fixes f
 
 ## Release Notes
 
-As always, the full set of release notes and changelogs is available on our GitHub Page: [https://github.com/inventree/InvenTree/releases/tag/0.10.0](https://github.com/inventree/InvenTree/releases/tag/0.10.0)
+As always, the full set of release notes and changelogs is [available on our GitHub Page](https://github.com/inventree/InvenTree/releases/tag/0.10.0).
 
 ## Mobile App
 
