revert link change

--- a/_posts/2023-02-06-0.10.0.md
+++ b/_posts/2023-02-06-0.10.0.md
@@ -7,7 +7,7 @@ The InvenTree development team is proud to announce the 0.10.0 stable release!
 
 ## New Features
 
-As always, thanks to the efforts of our development team and larger community, this release is packed full of new features! Some of these new features are highlighted below - refer to the [release notes](({% link  _posts/2023-02-06-0.10.0.md %}#release-notes) for more information!
+As always, thanks to the efforts of our development team and larger community, this release is packed full of new features! Some of these new features are highlighted below - refer to the [release notes](#release-notes) for more information!
 
 ### SSO Improvements
 
