--- a/_posts/2023-04-17-0.11.0.md
+++ b/_posts/2023-04-17-0.11.0.md
@@ -17,3 +17,14 @@ The addition of [Return Orders](https://docs.inventree.org/en/latest/sell/return
 
 Another great new feature in the latest release of InvenTree is the ability to generate [detailed stocktake reports](https://docs.inventree.org/en/latest/part/stocktake/). This feature enables businesses to conduct accurate and efficient inventory audits by providing periodic information on stock levels, locations, and movements. With this feature, businesses can view historical inventory levels, providing data for improved decision-making. The stocktake report feature also allows for customizations such as filtering by location, category, or supplier, providing a tailored view of inventory levels to meet specific business needs. Overall, the ability to generate stocktake reports is a significant enhancement to InvenTree, enabling businesses to take control of their inventory management and streamline their operations.
 
+### Improved Barcode Support
+
+The latest release provides improved barcode support, with the ability to generate barcodes for all order types, in addition to assigning custom barcodes.
+
+## Bug Fixes
+
+Multiple bug fixes (ranging from minor to significant) have been implemented. Many of these bugs have been reported (and even fixed) by our users. Your feedback really helps improve the software and make it more useful for everyone!
+
+## Release Notes
+
+As always, the full set of release notes and changelogs is [available on our GitHub Page](https://github.com/inventree/InvenTree/releases/tag/0.11.0).
