Fix broken link

--- a/_posts/2023-04-17-0.11.0.md
+++ b/_posts/2023-04-17-0.11.0.md
@@ -37,7 +37,7 @@ Multiple bug fixes (ranging from minor to significant) have been implemented. Ma
 
 ## Translation Updates
 
-Our users have been working *very* hard to improve the [translation support](../contribute.md#translate) for the InvenTree software. The translation efforts are progressing really, well - check out the [InvenTree project on crowdin](https://crowdin.com/project/inventree). If you would like to see further work on the translation, or looking to see InvenTree translated into a new language, please consider contributing your time as a translator!
+Our users have been working *very* hard to improve the translation support for the InvenTree software. The translation efforts are progressing really, well - check out the [InvenTree project on crowdin](https://crowdin.com/project/inventree). If you would like to see further work on the translation, or looking to see InvenTree translated into a new language, please consider contributing your time as a translator!
 
 ## Release Notes
 
