Add notes on deploying

--- a/_posts/2023-06-26-0.12.0.md
+++ b/_posts/2023-06-26-0.12.0.md
@@ -5,6 +5,9 @@ title: 0.12.0 Stable Release
 
 Once again, it's time to announce a new stable release! The InvenTree development team, aided by a number of new contributors, are pleased to announce a new stable release version - 0.12.0.
 
+## Deploying InvenTree
+
+InvenTree deployment is supported with multiple approaches. Refer to our [deployment guide](../deploy.md) for more information!
 
 ## New Features
 
