fix deployment link

--- a/_posts/2023-06-26-0.12.0.md
+++ b/_posts/2023-06-26-0.12.0.md
@@ -7,7 +7,7 @@ Once again, it's time to announce a new stable release! The InvenTree developmen
 
 ## Deploying InvenTree
 
-InvenTree deployment is supported with multiple approaches. Refer to our [deployment guide](../deploy.md) for more information!
+InvenTree deployment is supported with multiple approaches. Refer to our [deployment guide]({% link deploy.md %}) for more information!
 
 ## New Features
 
