--- a/_news/2023-06-26-0.12.0.md
+++ b/_news/2023-06-26-0.12.0.md
@@ -5,4 +5,4 @@ title: 0.12.0 Release
 
 ### 0.12.0 Release
 
-We are pleased to announce the 0.12.0 stable release, which represents a major upgrade to the InvenTree software! Read more about it in our [blog post]({% link blog/2023/06/26/0.12.0 %})
+We are pleased to announce the 0.12.0 stable release, which represents a major upgrade to the InvenTree software! Read more about it in our [blog post]({% post_url 2023-06-26-0.12.0 %})
