--- a/_posts/2023-07-27-react.md
+++ b/_posts/2023-07-27-react.md
@@ -7,7 +7,7 @@ The InvenTree development team is thrilled to share some exciting news about the
 
 ### A Brief History
 
-The InvenTree software project started as a pure server-side app, with the pages rendered on the server using html template files, via the [django](https://www.djangoproject.com/) template engine. As the amount of data handled by InvenTree increased, this approach very quickly became untenable, with page loading times slowing noticeably.
+The InvenTree software project started as a pure server-side app, with the pages rendered on the server using html template files, via the [Django](https://www.djangoproject.com/) template engine. As the amount of data handled by InvenTree increased, this approach very quickly became untenable, with page loading times slowing noticeably.
 
 A significant milestone came with the introduction of the REST API (we use the [Django Rest Framework](https://www.django-rest-framework.org/)). Now, the user interface could be separated from the data, which allowed some great improvements to the user experience. Now, content could be loaded dynamically via the API, and rendered on the client side using javascript. 
 
