--- a/_posts/2023-07-27-react.md
+++ b/_posts/2023-07-27-react.md
@@ -81,4 +81,4 @@ You can see the latest version on the demo site, at [https://demo.inventree.org/
 
 #### Development Assistance
 
-One major goal of the refactor is to attract more developers by using a well established modern framework. If you would like to contribute to the new interface, please raise a PR over on our [github page](https://github.com/inventree/inventree).
+One major goal of the refactor is to attract more developers by using a well-established modern framework. If you would like to contribute to the new interface, please raise a PR over on our [GitHub page](https://github.com/inventree/inventree).
