Add section on configuration file

--- a/_posts/2023-09-26-kicad.md
+++ b/_posts/2023-09-26-kicad.md
@@ -23,6 +23,26 @@ The same author who implemented the HTTP library support in KiCad has also relea
 
 What does this mean? Simply put, it means that you can now use your InvenTree database as a native KiCad library, and pull your InvenTree data directly in to your KiCad schematic.
 
+### Configuration File
+
+Once the plugin is installed, a simple configuration file on the local computer is all that is required to connect to the InvenTree database. All that is required is the URL to the remote server (with the correct plugin extension) and an API token for authentication:
+
+```
+{
+    "meta": {
+        "version": 1.0
+    },
+    "name": "InvenTree",
+    "description": "InvenTree Library",
+    "source": {
+        "type": "REST_API",
+        "api_version": "v1",
+        "root_url": "http://my.inventree.server/plugin/kicad-library-plugin",
+        "token": "usertokendatastring"
+    }
+}
+```
+
 ### Categories as Libraries
 
 InvenTree *categories* can be used as separate *libraries* in the KiCad application. The InvenTree plugin allows the user to select which part categories are exposed to KiCad. 
