--- a/_posts/2023-10-03-0.12.8.md
+++ b/_posts/2023-10-03-0.12.8.md
@@ -29,4 +29,4 @@ For a full description of other issues addressed in this release, refer to the [
 
 Maintaining and continuously improving a software project requires time, effort, and resources. We are committed to patching critical bugs in a timely manner, to ensure that everyone who is using InvenTree has the best possible experience with our software.
 
-If you would like to financially support the project, please refer to the [contribution guide](/contribute.md#sponsor).
+If you would like to financially support the project, please refer to the [contribution guide]({% link contribute.md %}#sponsor).
