--- a/_posts/2023-10-29-barcodes.md
+++ b/_posts/2023-10-29-barcodes.md
@@ -41,7 +41,7 @@ This functionality will be available in the upcoming `0.13.0` stable release.
 
 #### App Integration
 
-The new purchase order barcode functionality is supported by the [InvenTree mobile app](/extend/app.md):
+The new purchase order barcode functionality is supported by the [InvenTree mobile app]({% link extend/app.md %}):
 
 ![App barcode support](/assets/blog/barcode_po_actions.png)
 
