--- a/_posts/2023-10-29-barcodes.md
+++ b/_posts/2023-10-29-barcodes.md
@@ -13,7 +13,7 @@ Recent updates (such as [this pull request](https://github.com/inventree/InvenTr
 
 ### ECIA Barcodes for Purchase Orders
 
-Many electronics manufacturers provide data-rich barcodes on items received against incoming purchase orders. The *Electronics Component Industry Association* (ECIA) has devloped a [2D barcode standard](https://ecia.identificationlabs.com) which is now implemented by a number of major electronics suppliers.
+Many electronics manufacturers provide data-rich barcodes on items received against incoming purchase orders. The *Electronics Component Industry Association* (ECIA) has developed a [2D barcode standard](https://ecia.identificationlabs.com) which is now implemented by a number of major electronics suppliers.
 
 Purchase orders line items received from these suppliers are often provided with comprehensive barcodes, such as the example below, from Digikey:
 
@@ -51,7 +51,7 @@ We are working on integration into the web interface as part of our [move to rea
 
 #### Further Workflows
 
-Other advanced barcode workflows are also planned for future development, particulary around build orders and sales orders.
+Other advanced barcode workflows are also planned for future development, particularly around build orders and sales orders.
 
 Note that barcodes functionality can also be extended by plugins as required, for custom integrations or features.
 
@@ -63,4 +63,8 @@ In addition to working with external bluetooth scanners, this means that the app
 
 ![Barcode scanner](/assets/blog/barcode_scanner.jpeg)
 
-Any scanner which supports *wedge* or *keyboard* mode should now be able to integrate seamlessly with the InvensTree app.
+Any scanner which supports *wedge* or *keyboard* mode should now be able to integrate seamlessly with the InvenTree app.
+
+### Acknowledgements
+
+We would particularly like to acknowledge the superb contributions of [Bobbe](https://github.com/30350n) who was instrumental in developing these new barcode features and mobile app integration. The InvenTree community continues to help us develop the software into a more functional and feature-packed product!
