Move another blog post

--- a/inventree/blog/2022-12-12-0.9.0.md
+++ b/inventree/blog/2022-12-12-0.9.0.md
@@ -25,7 +25,7 @@ Database backup and restore functionality has been improved, using the [dbbackup
 
 This release provides a major overhaul for how pricing data is managed. The new pricing system calculates various pricing information (such as BOM cost or purchase price range) and caches this data in the database. This means that the efficiency of accessing pricing data in real time is greatly improved. For complex bills of material, viewing pricing data was (before this update) extremely prohibitive, due to the recursive calculations which were being performed "on the fly". The new achitecture makes use of the background worker to recalculate pricing information whenever the underlying data changes, ensuring that "up to date" pricing is readily available.
 
-![BOM Pricing](/assets/blog/bom-pricing.png)
+![BOM Pricing](/img/blog/bom-pricing.png)
 
 Additionally, more options for controlling how pricing information is calculated and handled have been implemented.
 
@@ -57,7 +57,7 @@ Now that the new website is live, a [news feed](/news) is available. If enabled,
 
 *Note that this feature is disabled by default, and must be enabled by a staff user*
 
-![News Reader](/assets/blog/news-reader.png)
+![News Reader](/img/blog/news-reader.png)
 
 ### Part Scheduling
 
