Another blog post

--- a/inventree/blog/2023-01-02-upcoming.md
+++ b/inventree/blog/2023-01-02-upcoming.md
@@ -33,7 +33,7 @@ Our new website (inventree.org) is now up and running! Thanks to @matmair in par
 
 ### Translations
 
-[Translations]({% link contribute.md %}#translate) for the InevnTree project continue to grow, thanks to our vibrant community of users. Thanks to the [crowdin project](https://crowdin.com) which makes this possible.
+[Translations](/contribute#translate) for the InevnTree project continue to grow, thanks to our vibrant community of users. Thanks to the [crowdin project](https://crowdin.com) which makes this possible.
 
 ### Users
 
@@ -41,7 +41,7 @@ And finally, thanks to our users! In 2022 we went from 500 stars on GitHub, to o
 
 The GitHub stargazers data gives us a picture of where InvenTree is being used - we've gone global!
 
-![Star Map](/assets/blog/world-map.png)
+![Star Map](/img/blog/world-map.png)
 
 *Location data were obtained from GitHub stars metadata - InvenTree software does not track user location!*
 
