--- a/inventree/blog/2021-10-25-starting.md
+++ b/inventree/blog/2021-10-25-starting.md
@@ -1,5 +1,5 @@
 ---
-author: matmair
+authors: matmair
 title: Starting with templates
 ---
 A good starting-point for developing your own plugin is taking a look at the [documentation](https://docs.inventree.org/en/latest/extend/plugins/).
