More blog updates

--- a/inventree/blog/2023-06-26-0.12.0.md
+++ b/inventree/blog/2023-06-26-0.12.0.md
@@ -1,5 +1,5 @@
 ---
-author: SchrodingersGat
+authors: oliver
 title: 0.12.0 Stable Release
 ---
 
@@ -7,7 +7,7 @@ Once again, it's time to announce a new stable release! The InvenTree developmen
 
 ## Deploying InvenTree
 
-InvenTree deployment is supported with multiple approaches. Refer to our [deployment guide]({% link deploy.md %}) for more information!
+InvenTree deployment is supported with multiple approaches. Refer to our [deployment guide](/deploy) for more information!
 
 ## New Features
 
@@ -104,4 +104,4 @@ High-quality documentation and responsive user support are vital components of a
 
 Maintaining reliable infrastructure and hosting services is essential for ensuring the ongoing development and maintenance of the InvenTree project. Your support will help us cover the various ongoing costs associated with hosting.
 
-To support InvenTree financially, please view the [contribution page]({% link contribute.md %}#sponsor) or contact our team for more information on how you can contribute. We extend our heartfelt gratitude to the entire InvenTree community for your ongoing support, contributions, and belief in the power of open-source software. Your involvement is invaluable, and we look forward to building a brighter future for InvenTree together.
+To support InvenTree financially, please view the [contribution page](/contribute#sponsor) or contact our team for more information on how you can contribute. We extend our heartfelt gratitude to the entire InvenTree community for your ongoing support, contributions, and belief in the power of open-source software. Your involvement is invaluable, and we look forward to building a brighter future for InvenTree together.
