Transfer remaining blog posts

--- a/inventree/blog/2023-10-29-barcodes.md
+++ b/inventree/blog/2023-10-29-barcodes.md
@@ -1,5 +1,5 @@
 ---
-author: SchrodingersGat
+authors: oliver
 title: New Barcode Features
 ---
 
@@ -17,7 +17,7 @@ Many electronics manufacturers provide data-rich barcodes on items received agai
 
 Purchase orders line items received from these suppliers are often provided with comprehensive barcodes, such as the example below, from Digikey:
 
-![Digikey Barcode](/assets/blog/digikey-barcode.png)
+![Digikey Barcode](/img/blog/digikey-barcode.png)
 
 This 2D barcode contains the following data fields (and other information):
 
@@ -41,9 +41,9 @@ This functionality will be available in the upcoming `0.13.0` stable release.
 
 #### App Integration
 
-The new purchase order barcode functionality is supported by the [InvenTree mobile app]({% link extend/app.md %}):
+The new purchase order barcode functionality is supported by the [InvenTree mobile app](/app):
 
-![App barcode support](/assets/blog/barcode_po_actions.png)
+![App barcode support](/img/blog/barcode_po_actions.png)
 
 #### Web Integration
 
@@ -61,7 +61,7 @@ To further improve barcode support, the mobile app has been updated to work with
 
 In addition to working with external bluetooth scanners, this means that the app is now supported on barcode scanners which natively run android:
 
-![Barcode scanner](/assets/blog/barcode_scanner.jpeg)
+![Barcode scanner](/img/blog/barcode_scanner.jpeg)
 
 Any scanner which supports *wedge* or *keyboard* mode should now be able to integrate seamlessly with the InvenTree app.
 
