Support splide image carousel

--- a/src/pages/app.mdx
+++ b/src/pages/app.mdx
@@ -3,6 +3,8 @@ title: InvenTree Mobile App
 description: InvenTree companion app
 ---
 
+import ImageGallery from '@site/src/components/ImageGallery';
+
 ## InvenTree Mobile App
 
 
@@ -10,6 +12,14 @@ The InvenTree Mobile App brings stock control to your pocket. Integrating seamle
 
 Native barcode support provides a multitude of context-sensitive stock control actions, allowing streamlined inventory management at your fingertips.  
 The app has been optimized for speed, providing instant access to stock knowledge and handy on-site functionality.
+
+<ImageGallery 
+    images={[
+        {src: "img/appgallery/screen_1.png" },
+        {src: "img/appgallery/screen_2.jpg" },
+        {src: "img/appgallery/screen_3.jpg" },
+    ]}
+/>
 
 ### Features
 
