--- a/src/pages/releases/0.8.2.md
+++ b/src/pages/releases/0.8.2.md
@@ -4,10 +4,15 @@ version: 0.8.2
 date: 2022-08-27
 ---
 
+import Admonition from '@theme/Admonition';
+
 ## InvenTree Release 0.8.2
 
 **Release Date:** 2022-08-27
 
+<Admonition type='info' title='Bugfix'>
+This is a bugfix release, which contains only minor changes and bugfixes.
+</Admonition>
 <!-- Release notes generated using configuration in .github/release.yml at 0.8.x -->
 
 ## What's Changed
