--- a/src/pages/releases/0.10.0.md
+++ b/src/pages/releases/0.10.0.md
@@ -4,10 +4,15 @@ version: 0.10.0
 date: 2023-02-07
 ---
 
+import Admonition from '@theme/Admonition';
+
 ## InvenTree Release 0.10.0
 
 **Release Date:** 2023-02-07
 
+<Admonition type='info' title='Minor Release'>
+This is a minor project release, which may contain some changes to existing features. Review the release notes carefully before upgrading.
+</Admonition>
 <!-- Release notes generated using configuration in .github/release.yml at master -->
 
 ## What's Changed
