--- a/src/pages/releases/0.10.1.md
+++ b/src/pages/releases/0.10.1.md
@@ -4,10 +4,15 @@ version: 0.10.1
 date: 2023-02-25
 ---
 
+import Admonition from '@theme/Admonition';
+
 ## InvenTree Release 0.10.1
 
 **Release Date:** 2023-02-25
 
+<Admonition type='info' title='Bugfix'>
+This is a bugfix release, which contains only minor changes and bugfixes.
+</Admonition>
 <!-- Release notes generated using configuration in .github/release.yml at 0.10.x -->
 
 ## What's Changed
