--- a/src/pages/releases/0.11.3.md
+++ b/src/pages/releases/0.11.3.md
@@ -4,10 +4,15 @@ version: 0.11.3
 date: 2023-06-07
 ---
 
+import Admonition from '@theme/Admonition';
+
 ## InvenTree Release 0.11.3
 
 **Release Date:** 2023-06-07
 
+<Admonition type='info' title='Bugfix'>
+This is a bugfix release, which contains only minor changes and bugfixes.
+</Admonition>
 <!-- Release notes generated using configuration in .github/release.yml at 0.11.x -->
 
 ## What's Changed
