--- a/src/pages/releases/0.12.9.md
+++ b/src/pages/releases/0.12.9.md
@@ -4,10 +4,15 @@ version: 0.12.9
 date: 2023-11-03
 ---
 
+import Admonition from '@theme/Admonition';
+
 ## InvenTree Release 0.12.9
 
 **Release Date:** 2023-11-03
 
+<Admonition type='info' title='Bugfix'>
+This is a bugfix release, which contains only minor changes and bugfixes.
+</Admonition>
 <!-- Release notes generated using configuration in .github/release.yml at 0.12.x -->
 
 ## What's Changed
