--- a/src/pages/releases/index.mdx
+++ b/src/pages/releases/index.mdx
@@ -15,6 +15,10 @@ The InvenTree project follows a formalized release numbering scheme, according t
 
 The head of the *stable* code branch represents the most recent stable tagged release of InvenTree.
 
+<Admonition type='info' title='Stable Code'>
+    The latest stable code can be found on [GitHub stable branch](https://github.com/inventree/inventree/tree/stable).
+</Admonition>
+
 <Admonition type='tip' title='Stable Docker'>
     To pull down the latest *stable* release of InvenTree in docker, use `inventree/inventree:stable`
 </Admonition>
@@ -22,6 +26,10 @@ The head of the *stable* code branch represents the most recent stable tagged re
 ### Development Branch
 
 The head of the *master* code branch represents the "latest and greatest" working codebase. All features and bug fixes are merged into the master branch, in addition to relevant stable release branches.
+
+<Admonition type='info' title='Development Code'>
+The latest development code can be found on [GitHub master branch](https://github.com/inventree/inventree/tree/master).
+</Admonition>
 
 <Admonition type='tip' title='Development Docker'>
 To pull down the latest *development* version of InvenTree in docker, use `inventree/inventree:latest`
