--- a/src/pages/app/index.mdx
+++ b/src/pages/app/index.mdx
@@ -8,10 +8,9 @@ import ImageGallery from '@site/src/components/ImageGallery';
 ## InvenTree Mobile App
 
 
-The InvenTree Mobile App brings stock control to your pocket. Integrating seamlessly with the InvenTree API, the app provides immediate access to inventory data wherever you are.
+The InvenTree Mobile App brings stock control to your pocket. Integrating seamlessly with the InvenTree API, the app provides immediate access to inventory data without requiring access to a computer.
 
-Native barcode support provides a multitude of context-sensitive stock control actions, allowing streamlined inventory management at your fingertips.  
-The app has been optimized for speed, providing instant access to stock knowledge and handy on-site functionality.
+Native barcode support provides a multitude of context-sensitive stock control actions, allowing streamlined inventory management at your fingertips. The app has been optimized for speed, providing instant access to stock knowledge and handy on-site functionality.
 
 <ImageGallery 
     images={[
@@ -59,10 +58,13 @@ The InvenTree app can be downloaded from either the Android or Apple app stores,
 
 <span class='fab fa-apple'></span> [Apple App Store](https://apps.apple.com/au/app/inventree/id1581731101?platform=iphone)
 
-### Documentation
-
-Mobile app documentation can be found on the [InvenTree documentation site](https://docs.inventree.org/en/latest/app/app/).
-
 ### Code
 
 The source code for the InvenTree app is available on [GitHub](https://github.com/inventree/inventree-app/) under the MIT license.
+
+### Suggestions / Issues
+
+To suggest an improvement or new feature for the InvenTree app, or to report an issue, refer to the [InvenTree GitHub page](https://github.com/inventree/inventree-app/issues).
+
+General feedback on the app is also welcomed - if you have any ideas on how to make the app more functional or effective, please let us know!
+
